--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@ In addition to my recruitment career, I have a background in filmmaking. I have 
   </section>
 
   <section id="experience">
-    <h2>Work Experience</h2>
-    <div class="experience-item">
-      <h3>Associate IT Recuriter - LussoTech</h3>
+  <h2>Work Experience</h2>
+  <div class="experience-item associate">
+    <h3>Associate IT Recruiter – LussoTech</h3>
       <p><strong>Jan 2025 – Present</strong></p>
       <ul>
         <li>Focus on sourcing, screening, and hiring candidates with technical expertise for IT-related roles. .</li>
@@ -39,8 +39,9 @@ In addition to my recruitment career, I have a background in filmmaking. I have 
         <li>Workinkg closely with hiring managers and HR departments to understand specific position requirements and identify suitable candidates..</li>
       </ul>
     </div>
-    <div class="experience-item">
-      <h3>Content Creator - DENAURLEN </h3>
+  
+<div class="experience-item content-creator">
+  <h3>Content Creator – DENAURLEN</h3>
       <p><strong>Sep 2022 – April 2023</strong></p>
       <ul>
         <li>Content Writing and making videos.</li>
