--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </header>
 
   <section id="about">
-    <img src="https://media.licdn.com/dms/image/v2/D5603AQHsbnemsDQuVw/profile-displayphoto-shrink_200_200/B56ZR9OO1sGsAY-/0/1737267677217?e=1754524800&v=beta&t=j21lQHQ4ofBjiuwYqIEgZspZOAOGubaA7k0pU9XcQ2A" alt="Your Name" class="profile-photo" />
+    <img src="https://media.licdn.com/dms/image/v2/D5603AQHsbnemsDQuVw/profile-displayphoto-shrink_200_200/B56ZR9OO1sGsAY-/0/1737267677217?e=1758758400&v=beta&t=YlSi5y9AR3Oitlg448u2uthW0_E6Gk0T8nOFwgoPnoE" />
     <h2>About Me</h2>
     <p>
       "Hello, my name is Bandari Sai Vikas. I am currently working as an IT recruiter, where I specialize in identifying and connecting top tech talent with dynamic organizations. My role involves understanding client requirements, sourcing suitable candidates, and facilitating the hiring process to ensure a seamless experience for both parties.
@@ -63,3 +63,4 @@ In addition to my recruitment career, I have a background in filmmaking. I have 
   </footer>
 </body>
 </html>
+
